# composition

./: compose.yml  readme.md
hellopaca/: .dockerignore  Cargo.toml  Dockerfile
hellopaca/src/: main.rs
ingress/: Cargo.toml  Config.toml  Dockerfile
ingress/src/: main.rs
torrent/: Dockerfile
