[package]
name = "hellopaca"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
