[package]
name = "ingress"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Joakim Soderlund <joakim.soderlund@gmail.com>"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
async-trait = "0.1.88"
http = "1.3.1"
# instant-acme = { version = "0.7.2", default-features = false, features = ["aws-lc-rs", "hyper-rustls"] }
pingora = { git = "https://github.com/JockeTF/pingora.git", branch = "feat/rustls-allow-configuring-custom-cert-resolvers", version = "0.5.0", features = ["proxy", "rustls"] }
rustls = "0.23.27"
